--- a/Testing notebooks/FP testing.ipynb
+++ b/Testing notebooks/FP testing.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "Year = 2022\n",
-    "GP = 1\n",
+    "GP = 10\n",
     "Type = \"Q\"\n",
     "session = f1.get_session(Year, GP, Type)\n",
     "session.load()"
@@ -49,7 +49,7 @@
     "    d2_fast_lap = session.laps.pick_driver(d2).pick_fastest()\n",
     "    d1_tel = d1_fast_lap.get_car_data().add_distance()\n",
     "    d2_tel = d2_fast_lap.get_car_data().add_distance()\n",
-    "    fig = plt.figure(facecolor=\"#333333\", figsize=(8,4),dpi=200)\n",
+    "    fig = plt.figure(facecolor=\"#333333\", figsize=(10,4),dpi=100)\n",
     "    ax = fig.subplots()\n",
     "    ax.plot(d1_tel['Distance'],d1_tel['Speed'], color = d1_color, label = d1)\n",
     "    ax.plot(d2_tel['Distance'],d2_tel['Speed'], color = d2_color, label = d2)\n",
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p1 = twoDriverLapComparison(session, \"VER\",\"LEC\")\n"
+    "p1 = twoDriverLapComparison(session, \"VER\",\"ALB\")\n"
    ]
   },
   {
