--- a/Testing notebooks/test.ipynb
+++ b/Testing notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# f1.Cache.clear_cache(\"C:\\Windows\\Temp\")"
+    "f1.Cache.clear_cache(\"C:\\Windows\\Temp\")"
    ]
   },
   {
