--- a/Testing notebooks/Miami.ipynb
+++ b/Testing notebooks/Miami.ipynb
@@ -44,18 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "core           INFO \tLoading data for Miami Grand Prix - Practice 2 [v2.3.2]\n",
+      "core           INFO \tLoading data for Spanish Grand Prix - Race [v2.3.2]\n",
       "api            INFO \tNo cached data found for driver_info. Loading data...\n",
       "api            INFO \tFetching driver list...\n",
       "api            INFO \tData has been written to cache!\n",
-      "core        WARNING \tFailed to load data from Ergast API! (This is expected for recent sessions)\n",
       "api            INFO \tNo cached data found for timing_data. Loading data...\n",
       "api            INFO \tFetching timing data...\n",
       "api            INFO \tParsing timing data...\n",
@@ -84,16 +83,26 @@
       "api            INFO \tNo cached data found for race_control_messages. Loading data...\n",
       "api            INFO \tFetching race control messages...\n",
       "api            INFO \tData has been written to cache!\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['1', '63', '55', '44', '31', '27', '24', '23', '22', '21', '20', '18', '16', '14', '11', '10', '4', '2', '77', '81']\n"
+      "core           INFO \tFinished loading data for 20 drivers: ['1', '44', '63', '11', '55', '18', '14', '31', '24', '10', '16', '22', '81', '21', '27', '23', '4', '20', '77', '2']\n"
      ]
     }
    ],
    "source": [
     "Year = 2023\n",
-    "GP = \"Miami\"\n",
-    "Type = \"FP2\"\n",
+    "GP = \"MIAMI\"\n",
+    "Type = \"R\"\n",
     "session = f1.get_session(Year, GP, Type)\n",
     "session.load()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(session.laps)\n",
+    "df.to_csv(f\"{GP}_Race_laps.csv\")"
    ]
   },
   {
